[build-system]
requires = ["setuptools>=65.5.1"]
build-backend = "setuptools.build_meta"

[project]
name = "defyes"
version = "0.1.0"
description = "A simple defyes package"
readme = "README.md"
license = {text = "MIT License"}
requires-python = ">=3.10"
authors = [
    { name = "karpatkey", email = "info@karpatkey.com" },
]

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "diskcache>=5.4.0,<6.0",
    "eth_abi>=2.0.0",
    "pandas>=1.3.5",
    "karpatkit @ git+https://github.com/karpatkey/karpatkit.git@v0.0.1",
    "requests>=2.28.1",
    "tqdm>=4.64.1",
    "web3>=6.3,<7.0",
    "gql>=3.4.0",
    "requests-toolbelt>=0.10.0"
]

[project.urls]
Homepage = "https://github.com/KarpatkeyDAO/defyes"

[tool.setuptools.packages.find]
include = ["defyes*"]
namespaces = false

# Linter configuruation.
[tool.isort]
profile = "black"
atomic = true
extend_skip_glob = "migrations,scripts"
line_length = 120

[tool.pytest.ini_options]
python_files = "test_*.py tests.py"

[tool.black]
line_length = 120

[tool.flake8]
extend-exclude = [
    '.git',
    '__pycache__',
]
extend-ignore = ['E203', 'E266', 'E501', 'W605', 'W503',
  'E722', 'C901' # Re-enable E722 and C901 after fixing.
]
max-line-length = 120
max-complexity = 18
# Specify the list of error codes you wish Flake8 to report.
select = ['B', 'C', 'E', 'F', 'W', 'T4', 'B9']
# Parallelism
jobs = 4
