[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "defyes"
dynamic = ["version"]
description = "A simple defyes package"
readme = "README.md"
license = {text = "MIT License"}
requires-python = ">=3.10"
authors = [
    { name = "karpatkey", email = "info@karpatkey.com" },
]

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "diskcache>=5.4.0,<6.0",
    "eth_abi>=2.0.0",
    "karpatkit @ git+https://github.com/karpatkey/karpatkit.git@v0.1.1",
    "requests>=2.28.1",
    "tqdm>=4.64.1",
    "web3>=6.3,<7.0",
    "gql>=3.4.0",
    "requests-toolbelt>=0.10.0"
]

[project.urls]
Homepage = "https://github.com/karpatkey/defyes"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "_version.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["defyes"]

# Linter configuration.
[tool.isort]
profile = "black"
atomic = true
extend_skip_glob = "migrations,scripts"
line_length = 120

[tool.pytest.ini_options]
python_files = "test_*.py tests.py"

[tool.black]
line_length = 120

[tool.flake8]
extend-exclude = [
    '.git',
    '__pycache__',
]
extend-ignore = ['E203', 'E266', 'E501', 'W605', 'W503']
max-line-length = 120
max-complexity = 18
# Specify the list of error codes you wish Flake8 to report.
select = ['B', 'C', 'E', 'F', 'W', 'T4', 'B9']
# Parallelism
jobs = 4
